--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,8 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if retaurant['rating'] > alternative ['rating']"
+    "    if retaurant['rating'] > alternative ['rating']:\n",
+    "        return"
    ]
   },
   {
