--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if retaurant['rating'] > alternative ['rating']:\n",
-    "        return print()"
+    "        return print('restaurant')\n",
+    "    lse"
    ]
   },
   {
