--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    if retaurant['rating'] > alternative ['rating']:\n",
     "        return print('restaurant')\n",
-    "    lse"
+    "    else:\n",
+    "        "
    ]
   },
   {
