--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if retaurant['rating'] > alternative['rating']:\n",
-    "        r\n",
+    "        name = restaurant\n",
     "    else:\n",
     "        "
    ]
