automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     "    if retaurant['rating'] > alternative['rating']:\n",
     "        name = restaurant\n",
     "    else:\n",
-    "        "
+    "        name = alternati"
    ]
   },
   {
