--- a/index.ipynb
+++ b/index.ipynb
@@ -149,12 +149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if retaurant['rating'] > alternative['rating']:\n",
+    "    if restaurant['rating'] > alternative['rating']:\n",
     "        name = restaurant\n",
     "    else:\n",
     "        name = alternative"
