--- a/index.ipynb
+++ b/index.ipynb
@@ -155,9 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        name = restaurant\n",
+    "        name = restaurant['name']\n",
     "    else:\n",
-    "        name = alternative"
+    "        name = alternative['name']"
    ]
   },
   {
