--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    restaurant['rating'] > alternative['rating']:\n",
+    "    restaurant['rating'] > alternative['rating']\n",
     "        name = restaurant['name']\n",
     "    else:\n",
     "        name = alternative['name']"
