--- a/index.ipynb
+++ b/index.ipynb
@@ -149,11 +149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
+    "    if True:\n",
     "    restaurant['rating'] > alternative['rating']"
    ]
   },
