--- a/index.ipynb
+++ b/index.ipynb
@@ -149,13 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-12-089a3c929fae>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-089a3c929fae>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    restaurant['rating'] > alternative['rating']\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if True:\n",
-    "    restaurant['rating'] > alternative['rating']"
+    "        restaurant['rating'] > alternative['rating']"
    ]
   },
   {
