--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    restaurant['rating'] > alternative['rating']\n",
+    "    irestaurant['rating'] > alternative['rating']\n",
     "    "
    ]
   },
