automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,8 +154,8 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    irestaurant['rating'] > alternative['rating']\n",
-    "    "
+    "    if restaurant['rating'] > alternative['rating']\n",
+    "        return "
    ]
   },
   {
