--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']\n",
-    "        best_retaurant"
+    "        best_retaurant ="
    ]
   },
   {
