--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']\n",
     "        best_retaurant = restaurant\n",
-    "    else "
+    "    else: "
    ]
   },
   {
