automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']\n",
     "        best_retaurant = restaurant\n",
-    "    else: "
+    "    else:\n",
+    "        best_restaurant"
    ]
   },
   {
