automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,9 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']\n",
-    "        best_retaurant = restaurant\n",
+    "        best_restaurant = restaurant\n",
     "    else:\n",
-    "        best_restaurant"
+    "        best_restaurant = "
    ]
   },
   {
