--- a/index.ipynb
+++ b/index.ipynb
@@ -149,15 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-fc89e4aea621>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-fc89e4aea621>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if restaurant['rating'] > alternative['rating']\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']\n",
     "        best_restaurant = restaurant\n",
     "    else:\n",
-    "        best_restaurant = "
+    "        best_restaurant = alternative"
    ]
   },
   {
