automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,9 +164,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']\n",
-    "        return best_restaurant = restaurant\n",
+    "        return restaurant['name']\n",
     "    else:\n",
-    "        return best_restaurant = alternative"
+    "        return alternative['name']"
    ]
   },
   {
