automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,15 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-30-ac1d7e7958e6>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-ac1d7e7958e6>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return better_restaurant = restaurant\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        return better_restaurant = re\n",
+    "        return better_restaurant = restaurant\n",
     "    else:\n",
-    "        return alternative['name']"
+    "        return better_restaurant = alternative"
    ]
   },
   {
