--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['price'] < alternative['price']:\n",
+    "    if restaurant['price'].len() < alternative['price'].len:\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
