--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for open in restaurants"
+    "    for open in len(restaurants"
    ]
   },
   {
