--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for open in len(restaurants"
+    "    for open in len(restaurants):\n",
+    "        "
    ]
   },
   {
