--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for open in len(restaurants):\n",
-    "        "
+    "        open.append(restaurants)"
    ]
   },
   {
