--- a/index.ipynb
+++ b/index.ipynb
@@ -283,13 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-53-f95de35c9e89>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-f95de35c9e89>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    open.append(restaurants['is closed'] = False)\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for open in len(restaurants):\n",
-    "        open.append(restaurants['is closed'])"
+    "        open.append(restaurants['is closed'] = False)"
    ]
   },
   {
