automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for open in len(restaurants):\n",
-    "        open.append(restaurants['is closed'] = False)"
+    "        open.append(restaurants['is closed'] = False)\n",
+    "        "
    ]
   },
   {
