--- a/index.ipynb
+++ b/index.ipynb
@@ -297,6 +297,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open = []\n",
     "    for open in len(restaurants):\n",
     "        return open.append(restaurants['is_closed'] = False)\n",
     "        "
