automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    for open in len(restaurants):\n",
+    "    for open in restaurants:\n",
+    "        \n",
     "       \n",
     "        "
    ]
