automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for open in restaurants:\n",
-    "        \n",
+    "        if restaurant\n",
     "       \n",
     "        "
    ]
