automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,8 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for open in restaurants:\n",
-    "        if restaurants['is_closed']\n",
+    "        if restaurants['is_closed'] = False\n",
+    "        open.append\n",
     "       \n",
     "        "
    ]
