automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "    open = []\n",
     "    for open in restaurants:\n",
     "        if restaurants['is_closed'] = False\n",
-    "        open.append\n",
+    "        open.append(restaurants)\n",
     "       \n",
     "        "
    ]
