automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,6 +301,7 @@
     "    for open in restaurants:\n",
     "        if restaurants['is_closed'] = False\n",
     "        open.append(restaurants)\n",
+    "    return r\n",
     "       \n",
     "        "
    ]
