--- a/index.ipynb
+++ b/index.ipynb
@@ -283,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "keyword can't be an expression (<ipython-input-54-309dbc698abb>, line 3)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-58-f5652e860172>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-54-309dbc698abb>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return open.append(restaurants['is_closed'] = False)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-f5652e860172>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    open.append(restaurants)\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -299,9 +299,9 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for open in restaurants:\n",
-    "        if restaurants['is_closed'] = False\n",
+    "        if restaurants['is_closed'] == False:\n",
     "        open.append(restaurants)\n",
-    "    return r\n",
+    "    return open\n",
     "       \n",
     "        "
    ]
