automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open = []\n",
+    "    selected = []\n",
     "    for open in restaurants:\n",
     "        if restaurants['is_closed'] == False:\n",
     "        open.append(restaurants)\n",
