automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,8 +300,8 @@
     "    selected = []\n",
     "    for open in restaurants:\n",
     "        if restaurants['is_closed'] == False:\n",
-    "        open.append(restaurants)\n",
-    "    return open\n",
+    "            selected.append(restaurants)\n",
+    "    return selected\n",
     "       \n",
     "        "
    ]
