automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
-    "    for open in restaurants:\n",
+    "    for restaurant in restaurants:\n",
     "        if restaurants['is_closed'] == False:\n",
     "            selected.append(restaurants)\n",
     "    return selected\n",
