automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurants['is_closed'] == False:\n",
-    "            selected.append(restaurant)\n",
+    "            selected.append('restaurant')\n",
     "    return selected\n",
     "       \n",
     "        "
