automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,10 +292,15 @@
     "    for restaurant in restaurants:\n",
     "        if restaurants['is_closed'] == False:\n",
     "            selected.append(restaurant)\n",
-    "    return selected\n",
-    "       \n",
-    "        "
+    "    return selected"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
