automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurants['is_closed'] == False:\n",
+    "        if restaurants['is_closed'] = False:\n",
     "            selected.append(restaurant)\n",
     "    return selected"
    ]
