automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,8 +290,8 @@
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurants['is_closed'] = False:\n",
-    "            selected.append(restaurant)\n",
+    "        if restaurants['is_closed'] == True:\n",
+    "            selected.remove(restaurant)\n",
     "    return selected"
    ]
   },
