--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    selected = []\n",
+    "    selected = restaurants\n",
     "    for restaurant in restaurants:\n",
     "        if restaurants['is_closed'] == True:\n",
     "            selected.remove(restaurant)\n",
