automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    selected = restaurants\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurants['is_closed'] == True:\n",
+    "        if restaurant['is_closed'] == True:\n",
     "            selected.remove(restaurant)\n",
     "    return selected"
    ]
