--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selected = restaurants\n",
-    "    for restaurant in restaurants:\n",
+    "    for x in restaurants:\n",
     "        if restaurant['is_closed'] == True:\n",
     "            selected.remove(restaurant)\n",
     "    return selected"
