--- a/index.ipynb
+++ b/index.ipynb
@@ -283,21 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selected = restaurants\n",
     "    for x in restaurants:\n",
-    "        if restaurant['is_closed'] == True:\n",
+    "        if x['is_closed'] == True:\n",
     "            selected.remove(restaurant)\n",
     "    return selected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "'Fork & Fig'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
