automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    selected = restaurants\n",
+    "    select\n",
     "    for x in restaurants:\n",
     "        if x['is_closed'] == True:\n",
     "            selected.remove(restaurant)\n",
