automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,9 +288,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    select\n",
+    "    selectec = []\n",
     "    for x in restaurants:\n",
-    "        if x['is_closed'] == True:\n",
+    "        if Re\n",
     "            selected.remove(restaurant)\n",
     "    return selected"
    ]
