automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    selectec = []\n",
     "    for x in restaurants:\n",
-    "        if restaurants['is_closed']\n",
+    "        if restaurants['is_closed'] = False\n",
     "            selected.remove(restaurant)\n",
     "    return selected"
    ]
