automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,10 +288,10 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    selectec = []\n",
+    "    selected = []\n",
     "    for x in restaurants:\n",
     "        if restaurants['is_closed'] = False\n",
-    "            selected.remove(restaurant)\n",
+    "            selected.append(restaurants)\n",
     "    return selected"
    ]
   },
