automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,21 +283,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-77-d2a2831982c9>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-77-d2a2831982c9>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurants['is_closed'] = False:\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for x in restaurants:\n",
-    "        if restaurants['is_closed'] = False\n",
+    "        if restaurants['is_closed'] = False:\n",
     "            selected.append(restaurants)\n",
     "    return selected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +315,7 @@
        "1"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +335,7 @@
        "'Fork & Fig'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
