automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,8 +288,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    selected = []\n",
-    "    for x in restaurants:\n",
+    "    open = []\n",
+    "    for restaurant in restaurants:\n",
     "        if restaurants['is_closed'] == False:\n",
     "            selected.append(restaurants)\n",
     "    return selected"
